--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "beautify",
-    "description": "i wanan be beautiful",
+    "description": "beautify me",
     "version": "2.0",
     "permissions": [
         "contextMenus",
